[project]
name = "YAMScrobbler"
version = "0.7.3"
description = "Yet Another MPD Scrobbler (for Last.FM!)"
readme = "README.md"
license = { text = "GPL-3.0" }


authors = [
        {name = "Derin Yarsuvat", email = "derin@ml1.net"},
]

dependencies = [
             "python-mpd2>=1.0.0",
             "PyYAML>=5.1",
             "requests>=2.21.0",
             "psutil>=5.6.3",
             "importlib-metadata",
]

[project.urls]
repository = "https://github.com/berulacks/yams.git"

[project.scripts]
yams = "yams.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
